test_scripts/errors/attr_on_non_object.shm
let x = 5; x.foo;
