test_scripts/errors/attr_on_non_object.stderr
 1 | let x = 5; x.foo;
                 ^^^^
Error: Ident "foo" not available on 5
